@@ -65,3 +65,8 @@ class DMY_ElementConformsToProfile : CIM_ElementConformsToProfile
 {
 };
 
+class SFCB_IndicationSubscription : CIM_IndicationSubscription
+{
+    sint32 DeliveryFailureCount;
+};
+
