@@ -51,6 +51,12 @@
 @LOAD_INDICATION_PROVIDER@   type: instance method
 @LOAD_INDICATION_PROVIDER@   namespace: root/interop
 #
+@LOAD_INDICATION_PROVIDER@[SFCB_IndicationSubscription]
+@LOAD_INDICATION_PROVIDER@   provider: InteropProvider
+@LOAD_INDICATION_PROVIDER@   location: sfcInteropProvider
+@LOAD_INDICATION_PROVIDER@   type: instance method
+@LOAD_INDICATION_PROVIDER@   namespace: root/interop
+#
 @LOAD_INDICATION_PROVIDER@[CIM_IndicationFilter]
 @LOAD_INDICATION_PROVIDER@   provider: InteropProvider
 @LOAD_INDICATION_PROVIDER@   location: sfcInteropProvider
